--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Yann Herklotz</title>
+  </head>
+
+  <body>
+    <p>My name is Yann Herklotz, I am currently a student at imperial college.</p>
+  </body>
+</html>
