--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
 
   <body>
+    <h1>Yann Herklotz</h1>
+    
     <p>My name is Yann Herklotz, I am currently a student at imperial college.</p>
   </body>
 </html>
