--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Yann Herklotz</h1>
     
     <p>My name is Yann Herklotz, I am currently a student at imperial college.</p>
+    <p>I have developed many applications.</p>
   </body>
 </html>
