--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
   <head>
     <title>Yann Herklotz</title>
+    <link rel="stylesheet" href="stylesheets/main_stylesheet.css">
   </head>
 
   <body>
