--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
 
   <body>
-    <h1>Yann Herklotz</h1>
+    <div class="titlebar">
+      <ul>
+	<li><a href="">Yann Herklotz</a></li>
+	<li><a href="#Development">Development</a></li>
+	<li><a href="#About">About</a></li>
+      </ul>
+    </div>
     
     <div class="terminal">
       <div class="topbar">Terminal</div>
