--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Yann Herklotz</title>
     <link rel="stylesheet" href="stylesheets/main_stylesheet.css">
+    <link rel="icon" href="resources/website_icon.png">
     <script src="scripts/blink_cursor.js"></script>
   </head>
 
