--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="titlebar">
       <ul>
-	<li><a href="">Yann Herklotz</a></li>
+	<li><a href="#Home">Yann Herklotz</a></li>
 	<li><a href="#Development">Development</a></li>
 	<li><a href="#About">About</a></li>
       </ul>
@@ -20,9 +20,9 @@
       <div class="topbar">Terminal</div>
       
       <p>
-	$ Introduction<br>My name is Yann Herklotz, I am currently a student at imperial college.
+	$ ./Introduction<br>My name is Yann Herklotz, I am currently a student at imperial college.
       </p>
-      <p>$ Apps<br>I have developed many applications.<span id="cursor">&#9608</span></p>
+      <p>$ ./Apps<br>I have developed many applications.<span id="cursor">&#9608</span></p>
     </div>
   </body>
 </html>
