Adding more authentic things to console

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>Yann Herklotz</title>
     <link rel="stylesheet" href="stylesheets/main_stylesheet.css">
-    <link rel="icon" href="resources/website_icon.png14">
+    <link rel="icon" href="resources/website_icon.png">
     <script src="scripts/blink_cursor.js"></script>
   </head>
-
   <body>
     <div class="titlebar">
       <ul>
@@ -15,7 +14,6 @@
 	    <li><a href="#About">About</a></li>
       </ul>
     </div>
-    
     <div class="terminal">
       <div class="topbar">Terminal - Home</div>
       <p>
